# deck.gl-healpix

./: .gitignore  README.md  lerna.json  package-lock.json  package.json  rollup.config.mjs  tsconfig.json
.github/workflows/: checks.yml  docs.yml
docs/specs/: healpix-pyramid-zarr.md
examples/_home/: .env.example  index.html  package.json  vite.config.mts
examples/_shared/: 404.html  README.md  package.json  tsconfig.json  vite-env.d.ts
examples/sandbox/: .env.example  README.md  index.html  package.json  tsconfig.app.json  vite.config.mts
examples/zarr-tiles/: .env.example  README.md  index.html  package.json  tsconfig.app.json
sentinel2-zhealpix/: README.md  pyproject.toml
sentinel2-zhealpix/sentinel2_zhealpix/: __main__.py  cli.py  config.py  download.py  healpix.py  healpix_utils.py  merge.py  pyramid.py  zarr_utils.py
sentinel2-zhealpix/tests/: conftest.py  test_cli.py  test_config.py  test_download.py  test_healpix.py  test_healpix_utils.py  test_merge.py  test_pyramid.py  test_zarr_utils.py
src/: index.ts
src/extensions/: healpix-color-extension.ts  healpix-color-frames-extension.ts  healpix-color-frames-shader-module.ts
src/geometry/: compute-geometry.ts  healpix-reference.test.ts  healpix-reference.ts  types.ts
src/layers/: healpix-cells-layer.ts  healpix-cells-primitive-layer.ts
src/shaders/: healpix-cells-shader-module.ts  healpix-corners.glsl.ts
src/types/: layer-props.ts
src/utils/: array-buffer.ts  cell-id-split.test.ts  cell-id-split.ts  color-frame.test.ts  color-frame.ts  color-map.test.ts  color-map.ts  decompose-cell-ids.ts  (+5 more)
(+53 files in other folders)
